RESOLVED FIXED280830
[Cocoa] File descriptor leak in createTemporaryZipArchive()
https://bugs.webkit.org/show_bug.cgi?id=280830
Summary [Cocoa] File descriptor leak in createTemporaryZipArchive()
Olivier Blin
Reported 2024-10-03 09:00:37 PDT
In Source/WTF/wtf/cocoa/FileSystemCocoa.mm, createTemporaryZipArchive() creates a file descriptor with mkstemp(), but it does not use the return value. It should close the file descriptor to avoid a leak. This has been seen by Loïc when reviewing bug 277734.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-03 10:00:48 PDT
Olivier Blin
Comment 2 2024-10-07 05:31:07 PDT
EWS
Comment 3 2024-10-07 11:04:05 PDT
Committed 284770@main (82751285ecd3): <https://commits.webkit.org/284770@main> Reviewed commits have been landed. Closing PR #34767 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.