[Cocoa] File descriptor leak in createTemporaryZipArchive() https://bugs.webkit.org/show_bug.cgi?id=280830

Reviewed by Darin Adler.

createTemporaryZipArchive() creates a file descriptor with mkostemp(),
but it does not use the return value. Close it to avoid a leak.

* Source/WTF/wtf/cocoa/FileSystemCocoa.mm:
(WTF::FileSystemImpl::createTemporaryZipArchive):

Canonical link: https://commits.webkit.org/284770@main